WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110584
[EFL] Missing implementation of AccessibilityControllerEfl and AccessibilityUIElementEfl files
https://bugs.webkit.org/show_bug.cgi?id=110584
Summary
[EFL] Missing implementation of AccessibilityControllerEfl and AccessibilityU...
Krzysztof Czech
Reported
2013-02-22 03:41:20 PST
Part of a task of adding support for Accessibility in DumpRenderTree.
Attachments
Patch
(14.85 KB, patch)
2013-02-22 03:52 PST
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Patch
(22.83 KB, patch)
2013-02-25 02:37 PST
,
Krzysztof Czech
gyuyoung.kim
: review+
Details
Formatted Diff
Diff
Patch
(23.06 KB, patch)
2013-03-05 07:05 PST
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Czech
Comment 1
2013-02-22 03:45:00 PST
Accessibility support in EFL's DumpRenderTree implementation.
> Part of a task of adding support for Accessibility in DumpRenderTree.
Krzysztof Czech
Comment 2
2013-02-22 03:52:08 PST
Created
attachment 189742
[details]
Patch
Mario Sanchez Prada
Comment 3
2013-02-22 05:58:09 PST
The patch looks good to me in general, but I wonder whether this could be a good moment to try to unskip some tests that might be passing now thanks to the implementation of this missing functionality in EFL's DRT. If that is possible, I would say it would be great to include that tests unskipping along with this patch.
Gyuyoung Kim
Comment 4
2013-02-22 20:26:00 PST
Comment on
attachment 189742
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189742&action=review
Patch looks good to me overall.
> Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:814 > +CString DumpRenderTreeSupportEfl::accessibilityHelpText(const AtkObject* axObject)
BTW, is there any reason to use CString instead of String ? DumpRenderTreeSupportEfl only exports String. So, I don't prefer to export new WebKit object for outer application.
> Tools/DumpRenderTree/efl/AccessibilityUIElementEfl.cpp:4 > + * Copyright (C) 2013 Samsung Electronics
Missing All Rights Reserved ?
Krzysztof Czech
Comment 5
2013-02-25 02:37:17 PST
Created
attachment 190023
[details]
Patch
Krzysztof Czech
Comment 6
2013-02-25 02:40:11 PST
(In reply to
comment #3
)
> The patch looks good to me in general, but I wonder whether this could be a good moment to try to unskip some tests that might be passing now thanks to the implementation of this missing functionality in EFL's DRT. > > If that is possible, I would say it would be great to include that tests unskipping along with this patch.
Sounds good. Unskipped LayoutTests/accessibility folder and skipping failure tests.
Krzysztof Czech
Comment 7
2013-02-25 02:44:22 PST
(In reply to
comment #4
)
> (From update of
attachment 189742
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=189742&action=review
> > Patch looks good to me overall. > > > Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:814 > > +CString DumpRenderTreeSupportEfl::accessibilityHelpText(const AtkObject* axObject) > > BTW, is there any reason to use CString instead of String ? DumpRenderTreeSupportEfl only exports String. So, I don't prefer to export new WebKit object for outer application. >
I think, there is no any specific reason. I already updated it.
> > Tools/DumpRenderTree/efl/AccessibilityUIElementEfl.cpp:4 > > + * Copyright (C) 2013 Samsung Electronics > > Missing All Rights Reserved ?
Done.
Krzysztof Czech
Comment 8
2013-02-25 02:53:25 PST
I'm unskipping whole LayoutTests/accessibility folder and skipping failure tests. Modified also DumpRenderTreeChrome file so that accessibilityController may look as a js object.
Gyuyoung Kim
Comment 9
2013-02-25 16:41:42 PST
Comment on
attachment 190023
[details]
Patch LGTM. But, GTK folks might wanna have final look.
Mario Sanchez Prada
Comment 10
2013-03-04 06:55:25 PST
Comment on
attachment 190023
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190023&action=review
The patch looks good to me overall. Just a comment on the change in the TestExpectations file, see it below
> LayoutTests/ChangeLog:8 > + Unskipping LayoutTests/accessibility folder.
I think this is not 100% accurate, since you're unskipping the folder, but skipping some tests anyway in an individual basis. Also, I wonder whether it would not be better for the EFL port to mark those tests as "Failures" instead of just skipping them, so you can easily realize when they start passing in the bots.
Krzysztof Czech
Comment 11
2013-03-05 07:05:50 PST
Created
attachment 191492
[details]
Patch
Krzysztof Czech
Comment 12
2013-03-05 07:08:57 PST
(In reply to
comment #10
)
> (From update of
attachment 190023
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=190023&action=review
> > The patch looks good to me overall. Just a comment on the change in the TestExpectations file, see it below > > > LayoutTests/ChangeLog:8 > > + Unskipping LayoutTests/accessibility folder. > > I think this is not 100% accurate, since you're unskipping the folder, but skipping some tests anyway in an individual basis.
Yes, it may sound inaccurate.
> > Also, I wonder whether it would not be better for the EFL port to mark those tests as "Failures" instead of just skipping them, so you can easily realize when they start passing in the bots.
Sounds good. I added failure ones and skipped only those with missing expected results.
Mario Sanchez Prada
Comment 13
2013-03-05 08:35:09 PST
(In reply to
comment #11
)
> Created an attachment (id=191492) [details] > Patch
Thanks for considering my comments. I have no other objections
Gyuyoung Kim
Comment 14
2013-03-05 20:17:03 PST
(In reply to
comment #13
)
> (In reply to
comment #11
) > > Created an attachment (id=191492) [details] [details] > > Patch > > Thanks for considering my comments. I have no other objections
If there is no objection by today, I'd like to land this patch.
WebKit Review Bot
Comment 15
2013-03-06 17:29:55 PST
Comment on
attachment 191492
[details]
Patch Clearing flags on attachment: 191492 Committed
r145014
: <
http://trac.webkit.org/changeset/145014
>
WebKit Review Bot
Comment 16
2013-03-06 17:29:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug