[EFL] Missing implementation of AccessibilityControllerEfl and AccessibilityUIElementEfl files https://bugs.webkit.org/show_bug.cgi?id=110584

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-03-06
Reviewed by Gyuyoung Kim.

Source/WebKit/efl:

Adds support for help text in DumpRenderTree.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::accessibilityHelpText):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

Adds missing implementation of AccessibilityControllerEfl
and AccessibilityUIElementEfl files. Modify DumpRenderTreeChrome
so that it can make accessibilityController as a js object.

* DumpRenderTree/AccessibilityController.h:
(AccessibilityController):
* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/atk/AccessibilityControllerAtk.cpp:
(AccessibilityController::childElementById): Moved declaration to base class.
Implementation can be shared among other ports.
* DumpRenderTree/efl/AccessibilityControllerEfl.cpp: Copied from Tools/DumpRenderTree/gtk/AccessibilityControllerGtk.cpp.
(AccessibilityController::focusedElement):
(AccessibilityController::rootElement):
(AccessibilityController::accessibleElementById):
* DumpRenderTree/efl/AccessibilityUIElementEfl.cpp: Copied from Tools/DumpRenderTree/atk/AccessibilityControllerAtk.cpp.
(AccessibilityUIElement::helpText):
* DumpRenderTree/efl/CMakeLists.txt:
* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::DumpRenderTreeChrome):
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
(DumpRenderTreeChrome::onWindowObjectCleared):
(DumpRenderTreeChrome::accessibilityController):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):
* DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:

LayoutTests:

Unskipping LayoutTests/accessibility folder.
Added failure tests. Skipping those with missing expected results.

* platform/efl-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/130022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145014 268f45cc-cd09-0410-ab3c-d52691b4dbfc