third_party/WebKit/Tools/DumpRenderTree/efl/AccessibilityControllerEfl.cpp
@@ -2,6 +2,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
  * Copyright (C) 2008, 2009, 2010 Apple Inc. All Rights Reserved.
  * Copyright (C) 2009 Jan Michael Alonzo
+ * Copyright (C) 2013 Samsung Electronics. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,19 +29,20 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "AccessibilityController.h"
 
+#if HAVE(ACCESSIBILITY)
+
 #include "AccessibilityCallbacks.h"
 #include "AccessibilityUIElement.h"
 #include "DumpRenderTree.h"
-#include "WebCoreSupport/DumpRenderTreeSupportGtk.h"
+#include "DumpRenderTreeChrome.h"
+#include "WebCoreSupport/DumpRenderTreeSupportEfl.h"
 
 #include <atk/atk.h>
-#include <gtk/gtk.h>
-#include <webkit/webkit.h>
 #include <wtf/gobject/GOwnPtr.h>
 
 AccessibilityUIElement AccessibilityController::focusedElement()
 {
-    AtkObject* accessible =  DumpRenderTreeSupportGtk::getFocusedAccessibleElement(mainFrame);
+    AtkObject* accessible =  DumpRenderTreeSupportEfl::focusedAccessibleElement(browser->mainFrame());
     if (!accessible)
         return 0;
 
@@ -49,7 +51,7 @@ AccessibilityUIElement AccessibilityController::focusedElement()
 
 AccessibilityUIElement AccessibilityController::rootElement()
 {
-    AtkObject* accessible = DumpRenderTreeSupportGtk::getRootAccessibleElement(mainFrame);
+    AtkObject* accessible = DumpRenderTreeSupportEfl::rootAccessibleElement(browser->mainFrame());
     if (!accessible)
         return 0;
 
@@ -58,7 +60,7 @@ AccessibilityUIElement AccessibilityController::rootElement()
 
 AccessibilityUIElement AccessibilityController::accessibleElementById(JSStringRef id)
 {
-    AtkObject* root = DumpRenderTreeSupportGtk::getRootAccessibleElement(mainFrame);
+    AtkObject* root = DumpRenderTreeSupportEfl::rootAccessibleElement(browser->mainFrame());
     if (!root)
         return 0;
 
@@ -71,5 +73,6 @@ AccessibilityUIElement AccessibilityController::accessibleElementById(JSStringRe
         return AccessibilityUIElement(result);
 
     return 0;
-
 }
+
+#endif
