third_party/WebKit/Tools/DumpRenderTree/efl/AccessibilityUIElementEfl.cpp
@@ -1,7 +1,8 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2008, 2009, 2010 Apple Inc. All Rights Reserved.
+ * Copyright (C) 2008 Apple Inc. All Rights Reserved.
  * Copyright (C) 2009 Jan Michael Alonzo
+ * Copyright (C) 2013 Samsung Electronics. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -22,54 +23,33 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
 #include "config.h"
-#include "AccessibilityController.h"
-
-#include "AccessibilityCallbacks.h"
 #include "AccessibilityUIElement.h"
-#include "DumpRenderTree.h"
-#include "WebCoreSupport/DumpRenderTreeSupportGtk.h"
 
+#if HAVE(ACCESSIBILITY)
+
+#include "WebCoreSupport/DumpRenderTreeSupportEfl.h"
+#include <JavaScriptCore/JSStringRef.h>
 #include <atk/atk.h>
-#include <gtk/gtk.h>
-#include <webkit/webkit.h>
+#include <wtf/Assertions.h>
 #include <wtf/gobject/GOwnPtr.h>
+#include <wtf/gobject/GRefPtr.h>
+#include <wtf/text/WTFString.h>
+#include <wtf/unicode/CharacterNames.h>
 
-AccessibilityUIElement AccessibilityController::focusedElement()
+JSStringRef AccessibilityUIElement::helpText() const
 {
-    AtkObject* accessible =  DumpRenderTreeSupportGtk::getFocusedAccessibleElement(mainFrame);
-    if (!accessible)
-        return 0;
+    if (!m_element)
+        return JSStringCreateWithCharacters(0, 0);
 
-    return AccessibilityUIElement(accessible);
+    ASSERT(ATK_IS_OBJECT(m_element));
+
+    String helpText = DumpRenderTreeSupportEfl::accessibilityHelpText(ATK_OBJECT(m_element));
+    GOwnPtr<gchar> axHelpText(g_strdup_printf("AXHelp: %s", helpText.utf8().data()));
+    return JSStringCreateWithUTF8CString(axHelpText.get());
 }
 
-AccessibilityUIElement AccessibilityController::rootElement()
-{
-    AtkObject* accessible = DumpRenderTreeSupportGtk::getRootAccessibleElement(mainFrame);
-    if (!accessible)
-        return 0;
-
-    return AccessibilityUIElement(accessible);
-}
-
-AccessibilityUIElement AccessibilityController::accessibleElementById(JSStringRef id)
-{
-    AtkObject* root = DumpRenderTreeSupportGtk::getRootAccessibleElement(mainFrame);
-    if (!root)
-        return 0;
-
-    size_t bufferSize = JSStringGetMaximumUTF8CStringSize(id);
-    GOwnPtr<gchar> idBuffer(static_cast<gchar*>(g_malloc(bufferSize)));
-    JSStringGetUTF8CString(id, idBuffer.get(), bufferSize);
-
-    AtkObject* result = childElementById(root, idBuffer.get());
-    if (ATK_IS_OBJECT(result))
-        return AccessibilityUIElement(result);
-
-    return 0;
-
-}
+#endif
